# verifica-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile.example  README.md  docker-compose.example.yml  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
prompts/: router_classification_prompt.md  router_synthesis_prompt.md  search_agent_prompt.md  transcription_agent_prompt.md
src/: app.py  app_router.py  cli.py  config.py  final_result_worker.py  final_results.py  jobs.py  llm_factory.py  llm_registry.py  llm_settings.py  llms.py  main.py  qdrant.py  queueing.py  util.py  worker.py
src/agents/: search_agent.py  transcription_agent.py
src/auth/: __init__.py  config.py  models.py  repository.py  validators.py
src/graph/: nodes.py  state.py  workflow.py
src/schemas/: __init__.py  api.py
src/tools/: __init__.py  audio_transcription.py  current_date.py  fetch_url.py  get_links.py
src/utils/: job_utils.py
