[project]
name = "denunciai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "serpapi>=1.0.2",
    "langchain>=1.3,<2",
    "langchain-core>=1.4,<2",
    "langgraph>=1.2,<2",
    "langchain-openai>=1.3,<2",
    "json5>=0.14.0",
    "pydantic>=2.11,<3",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "anakin-language-server>=1.23",
]
