[project]
name = "verifica-ai"
version = "0.2.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
license = "AGPL-3.0-only"
authors = [
    { name = "Ministerio Público do Estado do Acre" },
]
dependencies = [
    "fastapi>=0.116,<1",
    "serpapi>=1.0.2",
    "langchain>=1.3,<2",
    "langchain-core>=1.4,<2",
    "langchain-google-genai>=2.1,<3",
    "langgraph>=1.2,<2",
    "langchain-openai>=1.3,<2",
    "json5>=0.14.0",
    "pydantic>=2.11,<3",
    "python-dotenv>=1.1.1",
    "redis>=6.4,<7",
    "requests>=2.32.5",
    "rq>=2.6,<3",
    "uvicorn>=0.35,<1",
    "qdrant-client[fastembed]>=1.16.2",
]

[dependency-groups]
dev = [
    "anakin-language-server>=1.23",
]
